# weston-pro

./: .gitignore  LICENSE  README.md  README_zh.md  meson.build
compositor/: cursor.c  keyboad.c  main.c  meson.build  output.c  seat.c  server.c  tinywl.c  view.c  xdg.c
include/: weston-pro.h
protocol/: meson.build
